RESOLVED FIXED146309
REGRESSION (r182150): Crash in ViewGestureController::didRestoreScrollPosition() running WKWebView.LoadAlternateHTMLStringFromProvisionalLoadError test
https://bugs.webkit.org/show_bug.cgi?id=146309
Summary REGRESSION (r182150): Crash in ViewGestureController::didRestoreScrollPositio...
Tim Horton
Reported 2015-06-25 00:43:29 PDT
Attachments
patch (2.03 KB, patch)
2015-06-25 00:44 PDT, Tim Horton
mitz: review+
Tim Horton
Comment 1 2015-06-25 00:44:04 PDT
Tim Horton
Comment 2 2015-06-25 00:56:39 PDT
Note You need to log in before you can comment on or make changes to this bug.