Crash in ViewGestureController::didRestoreScrollPosition() running WKWebView.LoadAlternateHTMLStringFromProvisionalLoadError test https://bugs.webkit.org/show_bug.cgi?id=146309 <rdar://problem/21476651>

Reviewed by Dan Bernstein.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _didCommitLayerTree:]):
Null-check. _gestureController can be null if allowsBackForwardNavigationGestures is NO.


Canonical link: https://commits.webkit.org/164389@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185952 268f45cc-cd09-0410-ab3c-d52691b4dbfc